# ini-parser

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: main.yml
ini/: parser.py
src/: __init__.py  ini_parser.py  parse.py  parsed.py
test/: sample wrong.ini  sample.ini  test.py  test_rawda.py
