[tool.poetry]
name = "ini-parser"
version = "0.1.0"
description = "A parser for ini files and strings"
authors = ["rawdaGastan <rawda.gastan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
